@@ -11,6 +11,7 @@
 
    	<h:link id="foo" outcome="pretty:foo" value="foo" />
    	<h:link id="bar" outcome="pretty:bar" value="bar"/>
-
+   	<h:link id="baz" outcome="pretty:baz" value="baz"/>
+   	
    </body>
 </html>
